RESOLVED FIXED210501
[iPadOS] Wikipedia articles lay out incorrectly in 1/3 multitasking window
https://bugs.webkit.org/show_bug.cgi?id=210501
Summary [iPadOS] Wikipedia articles lay out incorrectly in 1/3 multitasking window
Wenson Hsieh
Reported 2020-04-14 09:05:29 PDT
Attachments
en.wikipedia.org/wiki/Huawei (before) (470.19 KB, image/png)
2020-04-14 09:11 PDT, Wenson Hsieh
no flags
Patch (12.34 KB, patch)
2020-04-14 11:12 PDT, Wenson Hsieh
no flags
en.wikipedia.org/wiki/Huawei (after) (638.24 KB, image/png)
2020-04-14 11:13 PDT, Wenson Hsieh
no flags
Patch (12.33 KB, patch)
2020-04-14 11:27 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-04-14 09:11:09 PDT
Created attachment 396423 [details] en.wikipedia.org/wiki/Huawei (before)
Wenson Hsieh
Comment 2 2020-04-14 11:12:42 PDT
Wenson Hsieh
Comment 3 2020-04-14 11:13:37 PDT
Created attachment 396440 [details] en.wikipedia.org/wiki/Huawei (after)
Tim Horton
Comment 4 2020-04-14 11:19:58 PDT
Comment on attachment 396439 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396439&action=review > Source/WebCore/page/Quirks.cpp:760 > + return equalLettersIgnoringASCIICase(m_document->url().host(), "en.wikipedia.org"); You're missing like 160 subdomains > Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:3892 > + return 504; Is rounding down to 500 an actual problem? Does it only make me feel better?
Wenson Hsieh
Comment 5 2020-04-14 11:22:04 PDT
Comment on attachment 396439 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396439&action=review >> Source/WebCore/page/Quirks.cpp:760 >> + return equalLettersIgnoringASCIICase(m_document->url().host(), "en.wikipedia.org"); > > You're missing like 160 subdomains 😅 (Will fix with "*.wikipedia.org" instead) >> Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:3892 >> + return 504; > > Is rounding down to 500 an actual problem? Does it only make me feel better? 500 will work too (I will tweak the above comment to say “close to” instead of “match”).
Wenson Hsieh
Comment 6 2020-04-14 11:27:55 PDT
EWS
Comment 7 2020-04-14 12:15:50 PDT
Committed r260090: <https://trac.webkit.org/changeset/260090> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396445 [details].
krinklemail
Comment 8 2020-05-03 13:54:29 PDT
Hi. Please note that 319 *.wikipedia.org sites are not the only wikis operated under the Wikimedia umbrella. There are at least 600 wikis under other domains names, such as wikidata.org, mediawiki.org, *.wiktionary.org, *.wikivoyage.org and more (<https://www.wikimedia.org/>) that all operate from the same cluster with the same software and theme settings. There are also many thousands more third-parties that self-host using the MediaWiki software (much like WordPress), with the same default theme.
Note You need to log in before you can comment on or make changes to this bug.